RESOLVED FIXED228184
Compilation error with gcc version 9.3.0 (Buildroot 2020.08-14-ge5a2a90)
https://bugs.webkit.org/show_bug.cgi?id=228184
Summary Compilation error with gcc version 9.3.0 (Buildroot 2020.08-14-ge5a2a90)
Víctor M. Jáquez L.
Reported 2021-07-22 09:17:54 PDT
While cross compiling with gcc version 9.3.0 (Buildroot 2020.08-14-ge5a2a90) I hit with this compilation error: WebCore/DerivedSources/JSRTCRtpSender.cpp: In function ‘JSC::JSValue WebCore::toJSNewlyCreated(JSC::JSGlobalObject*, WebCore::JSDOMGlobalObject*, WTF::Ref<WebCore::RTCRtpSender>&&)’: WebCore/DerivedSources/JSRTCRtpSender.cpp:500:54: error: static assertion failed: RTCRtpSender is not polymorphic 500 | static_assert(std::is_polymorphic<RTCRtpSender>::value, "RTCRtpSender is not polymorphic"); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
Attachments
Patch (2.57 KB, patch)
2021-07-22 09:24 PDT, Víctor M. Jáquez L.
no flags
Víctor M. Jáquez L.
Comment 1 2021-07-22 09:24:37 PDT
Chris Dumez
Comment 2 2021-07-22 09:28:47 PDT
Comment on attachment 434014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=434014&action=review > Source/WebCore/Modules/mediastream/RTCRtpReceiver.h:59 > + virtual ~RTCRtpReceiver(); Oh, that's because your port doesn't subclass LoggerHelper.
Víctor M. Jáquez L.
Comment 3 2021-07-22 09:47:53 PDT
(In reply to Chris Dumez from comment #2) > Comment on attachment 434014 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=434014&action=review > > > Source/WebCore/Modules/mediastream/RTCRtpReceiver.h:59 > > + virtual ~RTCRtpReceiver(); > > Oh, that's because your port doesn't subclass LoggerHelper. Thanks! Let me look at it :)
Víctor M. Jáquez L.
Comment 4 2021-07-22 09:59:06 PDT
But still, LoggerHelper inheritance is conditional...
EWS
Comment 5 2021-07-22 10:18:27 PDT
Committed r280179 (239873@main): <https://commits.webkit.org/239873@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434014 [details].
Radar WebKit Bug Importer
Comment 6 2021-07-22 10:19:22 PDT
Note You need to log in before you can comment on or make changes to this bug.